fixed visibility of swiper buttons

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -187,7 +187,7 @@
 				grid-area: a;
 				width: 100%;
 				@media screen and (min-width: $md) {
-					width: 100%;
+					// width: 100%;
 					height: 100%;
 					img {
 						width: 100%;
@@ -203,14 +203,15 @@
 				width: 100%;
 				background: rgba(51, 51, 51, 0.02);
 				grid-area: b;
-				padding: 1.5rem 1.5rem;
+				padding: 2rem 1.5rem;
 
 				@media screen and (min-width: $md) {
-					width: 100%;
+					width: 25rem;
 				}
 				ul {
 					width: 100%;
 					padding-top: 1rem;
+					height: 100%;
 				}
 				&:hover {
 					background: rgba(51, 51, 51, 0.1);
@@ -222,9 +223,10 @@
 				grid-area: c;
 				margin: 1rem auto 0 auto;
 				width: 100%;
-				padding: 1.5rem 1.5rem;
+				padding: 2rem 1.5rem;
+
 				@media screen and (min-width: $md) {
-					width: 100%;
+					width: 25rem;
 					margin: 0;
 				}
 				ul {
@@ -242,7 +244,7 @@
 				width: 100%;
 				// margin-inline: auto;
 				@media screen and (min-width: $md) {
-					width: 100%;
+					// width: 100%;
 					height: 100%;
 					margin: 0;
 				}
