--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,15 +1,8 @@
-.app {
-	display: grid;
-	min-height: 100vh;
-	grid-template-rows: auto 1fr auto;
-	margin: 0;
-}
-
 .home {
 	&-hero {
 		display: grid;
 		margin-bottom: 3rem;
-		margin-top: 1.5rem;
+		margin-top: 2rem;
 
 		.inner {
 			display: grid;
@@ -22,8 +15,11 @@
 
 				.hero_img1 {
 					width: 90%;
-					height: 90%;
-					// border: 1px solid red;
+					height: 100%;
+					@media screen and (min-width: $mobile) {
+						height: 120%;
+					}
+
 					@media screen and (max-width: 576px) {
 						width: 90vw;
 					}
@@ -35,22 +31,24 @@
 
 					img {
 						width: 100%;
+						height: 90%;
+						@media screen and (min-width: $mobile) {
+							height: 85%;
+						}
 					}
 
 					.hero-arrows {
-						// margin-top: 1.5rem;
+						margin-top: -2.5rem;
 						bottom: 0;
 						display: flex;
 						left: -10%;
 						align-items: center;
 						gap: 1rem;
-						background: red;
-						border: 1px solid red;
 
 						.line {
 							height: 0.8px;
 							background: #adadad;
-							// flex: 1;
+							flex: 1;
 						}
 
 						.control-arrows {
@@ -322,6 +320,10 @@
 			gap: 2rem;
 			margin-top: 2rem;
 			width: 100%;
+			height: 100vh;
+			@media screen and (min-width: $mobile) {
+				height: 120vh;
+			}
 
 			@media screen and (max-width: 576px) {
 				width: 90vw;
@@ -334,10 +336,18 @@
 
 			&-items {
 				background: rgba(51, 51, 51, 0.04);
-
+				height: 90vh;
+				overflow: hidden;
+				padding-bottom: 1rem;
+				@media screen and (min-width: $mobile) {
+					height: 110vh;
+				}
 				img {
 					width: 100%;
-					height: 40%;
+					height: 60%;
+					@media screen and (min-width: $mobile) {
+						height: 50%;
+					}
 				}
 				.content {
 					display: flex;
@@ -364,13 +374,12 @@
 			}
 
 			.swiper-clicks {
-				margin-top: 1rem;
 				display: flex;
 				align-items: center;
 				gap: 1rem;
-
-				z-index: 3;
-				width: 9%;
+				width: 85vw;
+				margin-top: -2rem;
+				justify-content: flex-end;
 
 				.line {
 					max-width: 150px;
